fix appveyor jdk 7 job