@@ -115,6 +115,13 @@ subprojects {
         def args = ['-Xms512m', '-Xmx3g', '-Dorientdb.installCustomFormatter=false=false']
 
         /**
+         * AppVeyor breaks with mockito throwing a java.lang.OutOfMemoryError: PermGen space
+         */
+        if ( JavaVersion.current().java7 ) {
+            args << '-XX:MaxPermSize=2g'
+        }
+
+        /**
          * jdk9 build is unable to determine the amount of MaxDirectMemorySize
          * See https://pastebin.com/ECvQeHx0
          */
